Fix an issue where the text carat was hard to read in highlights.

--- a/apps/tangent-electron/src/app/style/note.scss
+++ b/apps/tangent-electron/src/app/style/note.scss
@@ -568,6 +568,7 @@ article.note {
 	mark {
 		background: var(--highlightBackgroundColor);
 		color: var(--highlightTextColor);
+		caret-color: var(--highlightTextColor);
 		border-radius: 1px;
 		padding: 0 .1em;
 
